fixed alignment on home page
git-svn-id: https://sourcemap.codebasehq.com/sourcemap/smap.svn/trunk@709 ab0f7204-c6de-4229-9497-6c0baa3b4d53

--- a/www/sites/default/assets/styles/slider.css
+++ b/www/sites/default/assets/styles/slider.css
@@ -9,7 +9,7 @@
 div.anythingSlider .anythingControls {
     position: absolute;
     bottom: 25px;
-    right: 143px;
+    right: 128px;
     z-index: 100;
     opacity: 0.90;
     filter: alpha(opacity=90);
